--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "dependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "knex": "^2.3.0",
+    "mysql": "^2.18.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
@@ -10,6 +13,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {
+    "@types/mysql": "^2.15.21",
     "tslib": "^2.4.1"
   },
   "scripts": {
