--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.7.0",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
     "ts-node": "^10.9.1",
@@ -13,6 +15,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/joi": "^17.2.3",
     "@types/mysql": "^2.15.21",
     "tslib": "^2.4.1"
   },
